crates/model/tests/compile_fail/entity_declaration_not_rg.stderr
error: `declaration` is only valid on resource group entities (use `: ResourceGroup`)
  --> tests/compile_fail/entity_declaration_not_rg.rs:5:1
   |
 5 | / quent_model::entity! {
 6 | |     Bad {
 7 | |         events: {
 8 | |             a: MyEvent,
...  |
12 | | }
   | |_^
   |
   = note: this error originates in the macro `quent_model::entity` (in Nightly builds, run with -Z macro-backtrace for more info)
